--- a/index.html
+++ b/index.html
@@ -282,6 +282,46 @@
           </form>
           <p>Это бесплатно</p>
       </section>
+      <footer>
+        <a href="">
+          <img src="" alt="Логотип">
+        </a>
+        <address>
+          <p class="contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+        </address>
+        <ul class="footer-navigation-list">
+          <li><a href="#delivery" class="service-item footer-navigation-item">Доставка</a></li>
+          <li><a href="#delivery" class="service-item footer-navigation-item">Гарантия</a></li>
+          <li><a href="#delivery" class="service-item footer-navigation-item">Кредит</a></li>
+        </ul>
+        <address>
+          <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        </address>
+        <ul class="social-list">
+          <h3 class="visually-hidden">Социальные сети</h3>
+          <li class="social-item">
+            <a href="https://wwww.facebook.com/htmlacademy" class="social-item">
+              <span class="visually-hidden">Facebook</span>
+              <img src="" alt="Facebook">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://wwww.instagram.com/htmlacademy/" class="social-item">
+              <span class="visually-hidden">Instagram</span>
+              <img src="" alt="Instagram">
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="https://wwww.twitter.com/htmlacademy_ru" class="social-item">
+              <span class="visually-hidden">Twitter</span>
+              <img src="" alt="Twitter">
+            </a>
+          </li>
+        </ul>
+        <a href="https://htmlacademy.ru">
+          <img src="" alt="Логотип Html-Academy ">
+        </a>
+      </footer>
     </main>
   </body>
 </html>
