--- a/index.html
+++ b/index.html
@@ -293,19 +293,21 @@
         <a href="">
           <img src="" alt="Логотип Девайс">
         </a>
+        <h2 class="visually-hidden">Контакты</h2>
         <address>
           <p class="contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
         </address>
+        <h2 class="visually-hidden">Услуги</h2>
         <ul class="footer-navigation-list">
-          <li><a class="service-item footer-navigation-item" href="#delivery">Доставка</a></li>
-          <li><a class="service-item footer-navigation-item" href="#delivery">Гарантия</a></li>
-          <li><a class="service-item footer-navigation-item" href="#delivery">Кредит</a></li>
+          <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Доставка</h3></a></li>
+          <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Гарантия</h3></a></li>
+          <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Кредит</h3></a></li>
         </ul>
         <address>
           <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
         </address>
         <ul class="social-list">
-          <h3 class="visually-hidden">Социальные сети</h3>
+          <h2 class="visually-hidden">Социальные сети</h2>
           <li class="social-item">
             <a class="social-link" href="https://wwww.facebook.com/htmlacademy">
               <span class="visually-hidden">Facebook</span>
@@ -326,7 +328,7 @@
           </li>
         </ul>
         <a href="https://htmlacademy.ru">
-          <img src="" alt="Логотип Html-Academy ">
+          <img src="" alt="Сделано в Html-Academy ">
         </a>
       </footer>
     </main>
