--- a/catalog.html
+++ b/catalog.html
@@ -173,46 +173,48 @@
         </ul>
       </section>
     </main>
-      <footer>
-        <a href="">
-          <img src="" alt="Логотип">
-        </a>
-        <address>
-          <p class="contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-        </address>
-        <ul class="footer-navigation-list">
-          <li><a href="#delivery" class="service-item footer-navigation-item">Доставка</a></li>
-          <li><a href="#delivery" class="service-item footer-navigation-item">Гарантия</a></li>
-          <li><a href="#delivery" class="service-item footer-navigation-item">Кредит</a></li>
-        </ul>
-        <address>
-          <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-        </address>
-        <ul class="social-list">
-          <h3 class="visually-hidden">Социальные сети</h3>
-          <li class="social-item">
-            <a href="https://wwww.facebook.com/htmlacademy" class="social-item">
-              <span class="visually-hidden">Facebook</span>
-              <img src="" alt="Facebook">
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="https://wwww.instagram.com/htmlacademy/" class="social-item">
-              <span class="visually-hidden">Instagram</span>
-              <img src="" alt="Instagram">
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="https://wwww.twitter.com/htmlacademy_ru" class="social-item">
-              <span class="visually-hidden">Twitter</span>
-              <img src="" alt="Twitter">
-            </a>
-          </li>
-        </ul>
-        <a href="https://htmlacademy.ru">
-          <img src="" alt="Сделано в Html-Academy ">
-        </a>
-      </footer>
+    <footer>
+      <a href="">
+        <img src="" alt="Логотип Девайс">
+      </a>
+      <h2 class="visually-hidden">Контакты</h2>
+      <address>
+        <p class="contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+      </address>
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="footer-navigation-list">
+        <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Доставка</h3></a></li>
+        <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Гарантия</h3></a></li>
+        <li><a class="service-item footer-navigation-item" href="#delivery"><h3>Кредит</h3></a></li>
+      </ul>
+      <address>
+        <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+      </address>
+      <ul class="social-list">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <li class="social-item">
+          <a class="social-link" href="https://wwww.facebook.com/htmlacademy">
+            <span class="visually-hidden">Facebook</span>
+            <img src="" alt="Facebook">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://wwww.instagram.com/htmlacademy/">
+            <span class="visually-hidden">Instagram</span>
+            <img src="" alt="Instagram">
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link" href="https://wwww.twitter.com/htmlacademy_ru">
+            <span class="visually-hidden">Twitter</span>
+            <img src="" alt="Twitter">
+          </a>
+        </li>
+      </ul>
+      <a href="https://htmlacademy.ru">
+        <img src="" alt="Сделано в Html-Academy ">
+      </a>
+    </footer>
     </main>
   </body>
 </html>
