correction section breadcrumbs

--- a/catalog.html
+++ b/catalog.html
@@ -45,8 +45,8 @@
       </nav>
     </header>
     <main class="main-inner">
-      <header class="header-inner">
-        <h1 class="header-inner-title">Моноподы для селфи</h1>
+      <h1 class="main-inner-title">Моноподы для селфи</h1>
+      <section class="breadcrumbs">
         <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -58,7 +58,7 @@
             <a class="breadcrumbs-link">Моноподы для селфи</a>
           </li>
         </ul>
-      </header>
+      </section>
       <section class="catalog-inner">
         <form class="catalog-inner-filter" action="https://echo.htmlacademy.ru/" method="get">
           <h2 class="catalog-inner-filter-title">фильтр:</h2>
