--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a href="">
-        <img src="" alt="Логотип">
+        <img src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
       </a>
       <nav class="navigation">
         <ul class="navigation-user-list">
@@ -18,13 +18,13 @@
               </label>
             </form>
           </li>
-          <li class="navigation-user_item">
+          <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">Войти</a>
           </li>
-          <li class="navigation-user_item">
+          <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">Сравнить</a>
           </li>
-          <li class="navigation-user_item">
+          <li class="navigation-user-item">
             <a class="navigation-user-link" href="#">Корзина</a>
           </li>
         </ul>
@@ -110,7 +110,7 @@
         <ul class="catalog-inner-list">
           <li class="catalog-inner-card">
             <a class="catalog-inner-card-img" href="#">
-              <img src="" alt="Любительская селфи-палка">
+              <img src="images/products/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <h3 class="catalog-inner-card-subtitle">Любительская
                 селфи-палка</h3>
               <span class="catalog-inner-card-price">500 ₽</span>
@@ -118,14 +118,14 @@
           </li>
           <li class="catalog-inner-card">
             <a class="catalog-inner-card-img" href="#" >
-              <img src="" alt="Профессиональная селфи-палка ">
+              <img src="images/products/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
               <h3 class="catalog-inner-card-subtitle">Профессиональная селфи-палка </h3>
               <span class="catalog-inner-card-price">1 500 ₽</span>
             </a>
           </li>
           <li class="catalog-inner-card">
             <a class="catalog-inner-card-img" href="#">
-              <img src="" alt="Непотопляемая
+              <img src="images/products/product-3.jpg" width="360" height="380" alt="Непотопляемая
               селфи-палка">
               <h3 class="catalog-inner-card-subtitle">Непотопляемая
                 селфи-палка</h3>
@@ -134,7 +134,7 @@
           </li>
           <li class="catalog-inner-card">
             <a class="catalog-inner-card-img" href="#">
-              <img src="" alt="Селфи-палка">
+              <img src="images/products/product-4.jpg" width="360" height="380" alt="Селфи-палка">
               <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй за мной»</h3>
               <span class="catalog-inner-card-price">1 500 ₽</span>
             </a>
@@ -175,7 +175,7 @@
     </main>
     <footer>
       <a href="">
-        <img src="" alt="Логотип Девайс">
+        <img src="images/logo/logo-color.svg" width="145" height="36" alt="Логотип Девайс">
       </a>
       <h2 class="visually-hidden">Контакты</h2>
       <address>
@@ -212,7 +212,7 @@
         </li>
       </ul>
       <a href="https://htmlacademy.ru">
-        <img src="" alt="Сделано в Html-Academy ">
+        <img src="images/logo/logo-htmlacademy.svg" width="115" height="33" alt="Сделано в Html-Academy">
       </a>
     </footer>
     </main>
